@@ -9,6 +9,8 @@
 	  mod makefiles are generated by the content/makefile_builder.sh script;
 	  since this script is probably non-portable, the generated output makefiles
 	  have been included in the SVN dir for the time being.
+	* configure.ac: Cleaning up tests for libogg, libvorbis, libvorbisfile,
+	  libglade and libgnomeui.
 
 2010-03-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* mapedit/npcedit.cc: Fixed another instance of assuming longs are 32-bit.
